[package]
name = "carded"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "A Card learning programm written in Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/linebender/druid", version = "0.7.0" }
